# CIRA

cira/: .gitignore  EVALUATION.md  README.md  agent.md  agent.py  app.py  case_state.py  evidence_registry.py  pyproject.toml  requirements.txt  server.py  test_azure_openai.py  test_groq.py  triage.py  vercel.json  verifier.md
cira/api/: index.py
cira/client/src/: App.css  App.jsx  index.css
cira/utils/: azure_openai_client.py  groq_client.py  llm_client.py  pdf_generator.py
